LPS-39159 - Fix alignment and spacing in add page panel

--- a/portal-web/docroot/html/css/portal/add_content.css
+++ b/portal-web/docroot/html/css/portal/add_content.css
@@ -17,6 +17,11 @@
 		position: fixed;
 		width: 330px;
 	}
+
+	.lfr-page-template-description {
+		line-height: normal;
+		padding: 0px 10px 10px 3px;
+	}
 }
 
 .lfr-add-dialog, .lfr-add-panel {
@@ -153,13 +158,13 @@
 						overflow: hidden;
 						text-overflow: ellipsis;
 						white-space: nowrap;
-						width: 300px;
+						width: 280px;
 					}
 				}
 			}
 
 			.lfr-page-template-options {
-				padding: 10px;
+				padding: 10px 10px 10px 4px;
 			}
 		}
 
